--- a/.github/workflows/actions/install/action.yml
+++ b/.github/workflows/actions/install/action.yml
@@ -27,6 +27,7 @@ runs:
           .yarn-cache
           node_modules
           packages/**/node_modules
+          /github/home/.cache/puppeteer
 
     - name: install
       if: steps.cache.outputs.cache-hit != 'true'
