--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,8 @@
     "lint": "eslint src/**/*{.ts,.tsx}",
     "start": "stencil build --dev --watch --serve",
     "dev": "stencil build --watch",
-    "test": "stencil test --spec --e2e",
+    "test": "stencil test --spec && npm run test:ct",
+    "test:ct": "playwright test --config playwright-ct.config.ts --reporter list",
     "test:watch": "stencil test --spec --watchAll --no-cache",
     "test:coverage": "stencil test --spec --coverage",
     "test:e2e": "playwright test --reporter html",
