--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [install, build]
+    needs: [build]
     container:
       image: mcr.microsoft.com/playwright:v1.24.0-focal
       env:
@@ -92,6 +92,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/build-cache
+      - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/test
 
   lint:
