--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,9 +31,9 @@
     "lint": "eslint src/**/*{.ts,.tsx}",
     "start": "stencil build --dev --watch --serve",
     "dev": "stencil build --watch",
-    "test": "stencil test --spec && npm run test:ct",
+    "test": "npm run test:spec && npm run test:ct",
+    "test:spec": "stencil test --spec",
     "test:ct": "playwright test --config playwright-ct.config.ts --reporter list",
-    "test:watch": "stencil test --spec --watchAll --no-cache",
     "test:coverage": "stencil test --spec --coverage",
     "test:e2e": "playwright test --reporter html",
     "test:e2e:list": "playwright test --reporter list",
