docs(community): add community links

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
   - name: Support Question 🤔
-    url: https://github.com/siemens/ix/discussions
-    about: This issue tracker is not for support questions. Please post your question to the Discussions section.
+    url: https://community.siemens.com/c/ix/
+    about: This issue tracker is not for support questions. Please post your question to the Siemens Community Forum.
