--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ packages/html-test-app/src/public/additional-theme
 ###
 
 packages/documentation/docs/auto-generated/
+packages/documentation/scripts/.typedoc/
 packages/documentation/static/auto-generated/
 packages/documentation/static/webcomponent-examples/*
 !packages/documentation/static/versioned_examples/*/webcomponent-examples
