--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -47,6 +47,7 @@
     "@types/rimraf": "^3.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.24.8",
     "typescript": "^4.8.2"
   },
   "browserslist": {
