--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -2,5 +2,5 @@
   "compilerOptions": {
     "skipLibCheck": true
   },
-  "include": ["./packages/core/src/components/utils/**/*.ts"]
+  "include": ["./packages/**/*.ts", "./packages/**/*.tsx"]
 }
