--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,8 @@
     "scss/"
   ],
   "scripts": {
-    "build": "stencil build --prod",
+    "build": "stencil build --prod && npm run build:scss",
+    "build:scss": "ts-node -P ./scripts/build/tsconfig.json ./scripts/build/build-css.ts",
     "build:dev": "stencil build",
     "lint": "eslint src/**/*{.ts,.tsx}",
     "start": "stencil build --dev --watch --serve",
@@ -39,8 +40,7 @@
     "test:e2e:list": "playwright test --reporter list",
     "playwright.docker": "docker run --rm --network host -v $(pwd):/work/ -w /work/packages/core -it mcr.microsoft.com/playwright:v1.32.1-focal /bin/bash",
     "host-root": "http-server ./ -a 127.0.0.1 -p 8080 -c-1",
-    "generate": "stencil generate",
-    "generate:theme": "ts-node -P ./scripts/generate-theme/tsconfig.json ./scripts/generate-theme/generate-theme"
+    "generate": "stencil generate"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.1.0",
