--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -6,6 +6,7 @@
     "@stencil-community/async-methods": 0,
     "@stencil-community/own-props-must-be-private": 0,
     "@stencil-community/own-methods-must-be-private": 0,
+    "@stencil-community/strict-boolean-conditions": 0,
     "react/jsx-no-bind": 0,
     "react/jsx-uses-react": 0,
     "react/react-in-jsx-scope": 0
