--- a/packages/figma-plugin/package.json
+++ b/packages/figma-plugin/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "rimraf": "^5.0.1"
   }
 }
