docs: migrate buttons to reference figma images

--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "packages/*"
   ],
   "scripts": {
-    "docs": "turbo run start --filter=documentation",
-    "build": "turbo run build",
-    "start": "turbo run start",
+    "docs": "dotenv -- turbo run start --filter=documentation",
+    "build": "dotenv -- turbo run build",
+    "start": "dotenv -- turbo run start",
     "clean": "npx rimraf ./**/node_modules",
-    "turbo": "turbo",
-    "lint": "turbo run lint",
+    "turbo": "dotenv -- turbo",
+    "lint": "dotenv -- turbo run lint",
     "generate-documentation-version": "yarn workspace documentation run generate-version",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "release": "node ./scripts/release.js",
@@ -48,6 +48,7 @@
     "colorette": "^2.0.19",
     "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "execa": "^5.1.1",
