ci(deploy-pages): make workflow runnable via ui

--- a/.github/workflows/deploy-pages-daily.yml
+++ b/.github/workflows/deploy-pages-daily.yml
@@ -3,6 +3,7 @@ name: Deploy to GitHub Pages (DEV Version)
 on:
   schedule:
     - cron: '0 6 * * 1-4'
+  workflow_dispatch:
 
 permissions:
   contents: write
