--- a/.github/ISSUE_TEMPLATE/docs_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/docs_bug_report.yml
@@ -1,4 +1,4 @@
-name: Bug Report for `ix.siemens.io`
+name: Bug Report for the official iX documentation
 description: Documentation bug report 📑
 labels: ['component: documentation', 'triage']
 body:
