--- a/.github/workflows/deploy-pages-daily.yml
+++ b/.github/workflows/deploy-pages-daily.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           mkdir .tmp-brand
           cd .tmp-brand
-          npm install @siemens/ix-brand-theme@^1.1.0 --no-save --legacy-peer-deps
+          npm install @siemens/ix-brand-theme@1.3.0-beta.0 --no-save --legacy-peer-deps
           cd ..
           cp -R ./node_modules/@siemens/ix-brand-theme ./packages/html-test-app/src/public/additional-theme
 
