--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -88,7 +88,8 @@
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
-    "bootstrap": "~5.2.0"
+    "bootstrap": "~5.2.0",
+    "@siemens/ix-icons": "^1.2.0"
   },
   "config": {
     "commitizen": {
