--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -48,10 +48,10 @@
   },
   "peerDependencies": {
     "react": ">=17.0.2",
-    "react-dom": ">=17.0.2"
+    "react-dom": ">=17.0.2",
+    "@siemens/ix-icons": "^1.2.0"
   },
   "dependencies": {
-    "@siemens/ix": "~2.0.0-beta.1",
-    "@siemens/ix-icons": "^1.2.0"
+    "@siemens/ix": "~2.0.0-beta.1"
   }
 }
