--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -31,8 +31,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "@siemens/ix": "~2.0.0-beta.1",
-    "@siemens/ix-icons": "^1.2.0"
+    "@siemens/ix": "~2.0.0-beta.1"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
@@ -43,6 +42,7 @@
     "eslint-plugin-vue": "^9.9.0"
   },
   "peerDependencies": {
-    "vue": ">=3.2.45"
+    "vue": ">=3.2.45",
+    "@siemens/ix-icons": "^1.2.0"
   }
 }
