docs(migration/2.0.0): enhance migration guide (#757)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": [
+        "components/**",
         "dist/**",
         "dist-css/**",
         "build/**",
