--- a/packages/documentation/static/code-runtime/angular/package.json
+++ b/packages/documentation/static/code-runtime/angular/package.json
@@ -16,9 +16,9 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
-    "@siemens/ix": "^1",
-    "@siemens/ix-angular": "^1",
-    "@siemens/ix-icons": "^1",
+    "@siemens/ix": "latest",
+    "@siemens/ix-angular": "latest",
+    "@siemens/ix-icons": "latest",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
