--- a/packages/documentation/static/code-runtime/html/package.json
+++ b/packages/documentation/static/code-runtime/html/package.json
@@ -9,6 +9,9 @@
   "files": [
     "dist"
   ],
+  "dependencies": {
+    "@siemens/ix-aggrid": "latest"
+  },
   "devDependencies": {
     "vite": "^3.1.0",
     "@siemens/ix": "latest",
