--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -14,7 +14,10 @@
     "web-vitals": "^2.1.4",
     "@siemens/ix": "latest",
     "@siemens/ix-icons": "latest",
-    "@siemens/ix-react": "latest"
+    "@siemens/ix-react": "latest",
+    "@siemens/ix-aggrid": "latest",
+    "ag-grid-community": "^28",
+    "ag-grid-react": "^28"
   },
   "scripts": {
     "start": "react-scripts start",
