--- a/packages/documentation/static/code-runtime/vue/package.json
+++ b/packages/documentation/static/code-runtime/vue/package.json
@@ -11,7 +11,10 @@
     "vue": "^3.2.6",
     "@siemens/ix": "latest",
     "@siemens/ix-icons": "latest",
-    "@siemens/ix-vue": "latest"
+    "@siemens/ix-vue": "latest",
+    "@siemens/ix-aggrid": "latest",
+    "ag-grid-community": "^28",
+    "ag-grid-vue3": "^28"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
