feat(charts): add missing examples & mod. packages

--- a/packages/documentation/static/code-runtime/angular/package.json
+++ b/packages/documentation/static/code-runtime/angular/package.json
@@ -16,15 +16,18 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
-    "@siemens/ix": "latest",
-    "@siemens/ix-angular": "latest",
-    "@siemens/ix-icons": "latest",
+    "@siemens/ix": "~2.0.3",
+    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-angular": "~2.0.3",
+    "@siemens/ix-aggrid": "~2.0.3",
+    "@siemens/ix-echarts": "~2.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0",
-    "@siemens/ix-aggrid": "latest",
-    "ag-grid-community": "^28",
-    "ag-grid-angular": "^28"
+    "ag-grid-angular": "^29.1.0",
+    "ag-grid-community": "^29.1.0",
+    "ngx-echarts": "14.0.0",
+    "echarts": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.2",
