--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -13,11 +13,14 @@
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
     "@siemens/ix": "latest",
-    "@siemens/ix-icons": "latest",
     "@siemens/ix-react": "latest",
+    "@siemens/ix-icons": "latest",
     "@siemens/ix-aggrid": "latest",
-    "ag-grid-community": "^28",
-    "ag-grid-react": "^28"
+    "@siemens/ix-echarts": "latest",
+    "ag-grid-community": "^29.1.0",
+    "ag-grid-react": "^29.1.0",
+    "echarts-for-react": "latest",
+    "echarts": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
