--- a/packages/documentation/static/code-runtime/vue/package.json
+++ b/packages/documentation/static/code-runtime/vue/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "vue": "^3.2.6",
     "@siemens/ix": "latest",
-    "@siemens/ix-icons": "latest",
     "@siemens/ix-vue": "latest",
+    "@siemens/ix-icons": "latest",
     "@siemens/ix-aggrid": "latest",
-    "ag-grid-community": "^28",
-    "ag-grid-vue3": "^28"
+    "@siemens/ix-echarts": "latest",
+    "ag-grid-community": "^28.2.1",
+    "ag-grid-vue3": "^28.2.1",
+    "vue-echarts": "latest",
+    "echarts": "latest"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
