refactor(aggrid): remove stencil from aggrid

--- a/packages/aggrid/tsconfig.json
+++ b/packages/aggrid/tsconfig.json
@@ -1,24 +1,10 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false,
-    "declaration": false,
-    "experimentalDecorators": true,
-    "lib": ["dom", "es2017"],
-    "moduleResolution": "node",
-    "module": "esnext",
-    "target": "es2017",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "jsx": "react",
-    "jsxFactory": "h",
-    "skipLibCheck": true,
     "baseUrl": ".",
+    "noImplicitAny": false,
     "paths": {
-      "@utils/test": ["src/components/tests/utils/test"],
-      "@utils/test/*": ["src/components/tests/utils/test/*"]
+      "@utils/test": ["tests/utils/test"]
     }
-  },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  }
 }
