--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
-    "@siemens/ix": "~2.0.1",
+    "@siemens/ix": "2.1.0-beta.0",
     "@siemens/ix-icons": "^2.0.0",
     "@types/gulp": "^4.0.14",
     "@types/gulp-postcss": "^8.0.4",
@@ -38,7 +38,7 @@
     "ts-node": "^10.9.1"
   },
   "peerDependencies": {
-    "@siemens/ix": "~2.0.1",
+    "@siemens/ix": "2.1.0-beta.0",
     "ag-grid-community": "^28 || ^29 || ^30"
   }
 }
