--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -26,9 +26,9 @@
     "@siemens/html-test-app": "~2.1.0-beta.0",
     "@siemens/ix": "~2.1.0-beta.0",
     "@siemens/ix-echarts": "~2.1.0-beta.0",
-    "@siemens/ix-icons": "2.0.0-beta.0",
+    "@siemens/ix-icons": "~2.0.1",
     "@siemens/ix-react": "~2.1.0-beta.0",
-    "@siemens/ix-angular": "~2.0.3",
+    "@siemens/ix-angular": "~2.1.0-beta.0",
     "@stackblitz/sdk": "^1.8.1",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
