--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,7 +49,7 @@
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2",
-    "@siemens/ix-icons": "^2.0.0"
+    "@siemens/ix-icons": "~2.0.1"
   },
   "dependencies": {
     "@siemens/ix": "~2.1.0-beta.0"
