--- a/package.json
+++ b/package.json
@@ -22,17 +22,13 @@
     "docs": "dotenv -- turbo run start --filter=documentation",
     "build": "dotenv -- turbo run build",
     "start": "dotenv -- turbo run start",
-    "clean": "npx rimraf ./**/node_modules",
     "turbo": "dotenv -- turbo",
     "lint": "dotenv -- turbo run lint",
-    "generate-documentation-version": "yarn workspace documentation run generate-version",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "release": "node ./scripts/release.js",
-    "push-git": "node ./scripts/push-git.js",
-    "sonarqube": "sonar-scanner",
     "visual-regression": "dotenv -- turbo run visual-regression",
     "test": "dotenv -- turbo run test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ci:publish": "pnpm publish -r --dry-run"
   },
   "dependencies": {
     "tslib": "^2.3.0"
