--- a/packages/eslint-config-ix/package.json
+++ b/packages/eslint-config-ix/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "dependencies": {
     "eslint": "latest",
     "eslint-config-prettier": "latest",
