--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "visual-regression": "dotenv -- turbo run visual-regression",
     "test": "dotenv -- turbo run test",
     "prepare": "husky install",
+    "ci:version": "pnpm changeset version",
     "ci:publish": "pnpm publish -r --dry-run"
   },
   "dependencies": {
