--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: build
+name: Release
 
 on:
   push:
@@ -13,9 +13,6 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: ./.github/workflows/actions/turbo
-
-      - name: Build
-        run: pnpm build --cache-dir=.turbo --filter \!documentation
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
