--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
