--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "documentation",
-  "version": "2.1.0-beta.0",
+  "version": "2.0.3",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -23,11 +23,11 @@
     "@docusaurus/preset-classic": "3.0.0",
     "@docusaurus/theme-live-codeblock": "3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@siemens/html-test-app": "2.1.0-beta.0",
-    "@siemens/ix": "2.1.0-beta.0",
-    "@siemens/ix-echarts": "2.1.0-beta.0",
+    "@siemens/html-test-app": "~99.88.77",
+    "@siemens/ix": "~99.88.77",
+    "@siemens/ix-echarts": "~99.88.77",
     "@siemens/ix-icons": "2.0.0-beta.0",
-    "@siemens/ix-react": "2.1.0-beta.0",
+    "@siemens/ix-react": "~99.88.77",
     "@stackblitz/sdk": "^1.8.1",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.3.2",
