--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'release/*'
+      - 'changeset-release/main'
   pull_request:
     branches:
       - '**'
