--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -2,6 +2,8 @@ name: Deploy PR previews
 
 on:
   pull_request:
+    paths:
+      - packages/documentation/**
     branches-ignore:
       - changeset-release/main
     types:
