--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Create Release Pull Request
         uses: changesets/action@v1
         with:
-          commit: [ci] release
+          commit: "ci: release"
+          title: "ci: release"
           version: pnpm ci:version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
