ci: use playwright image (#12)
* ci: use playwright image

* ci: test sharding

* ci: split testing

* ci: remove reporter from scripts

* ci: debug

* fix: fix

* fix: revert

* ci: matrix

* ci: add aggrid

* ci: cleanup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,31 +21,88 @@ jobs:
       - name: Build
         run: pnpm build --cache-dir=.turbo --filter \!documentation
 
-  testing:
+  visual-testing-core:
     needs: [build]
     timeout-minutes: 10
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.39.0-jammy
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: [1/4, 2/4, 3/4, 4/4]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/turbo
 
-      - name: Install Playwright Browsers
-        run: pnpm playwright install chromium --with-deps
-
-      - name: Test
-        run: pnpm run test --cache-dir=.turbo --filter @siemens/ix --filter @siemens/ix-angular
-
       - name: Visual Regression
-        run: pnpm run visual-regression --cache-dir=.turbo --filter @siemens/ix --filter @siemens/ix-aggrid
+        run: pnpm run visual-regression --cache-dir=.turbo --filter @siemens/ix -- --shard ${{ matrix.shard }}
 
       - uses: actions/upload-artifact@v3
         if: always()
         with:
-          name: playwright-report
+          name: core-blob-report
           path: |
-            ./packages/core/playwright-report/
+            ./packages/core/blob-report/
+          retention-days: 1
+
+  visual-testing-aggrid:
+    needs: [build]
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.39.0-jammy
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/actions/turbo
+
+      - name: Visual Regression
+        run: pnpm run visual-regression --cache-dir=.turbo --filter @siemens/ix-aggrid
+
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: aggrid-html-report--attempt-${{ github.run_attempt }}
+          path: |
             ./packages/aggrid/playwright-report/
+          retention-days: 1
+
+  merge-core-reports:
+      if: failure()
+      needs: [visual-testing-core]
+
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/actions/turbo
+
+      - name: Download blob reports from GitHub Actions Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: core-blob-report
+          path: all-blob-reports
+
+      - name: Merge into HTML Report
+        run: pnpm exec playwright merge-reports --reporter html ./all-blob-reports
+
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v3
+        with:
+          name: core-html-report--attempt-${{ github.run_attempt }}
+          path: playwright-report
           retention-days: 2
+  unit:
+    needs: [build]
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.39.0-jammy
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/actions/turbo
+
+      - name: Test
+        run: pnpm run test --cache-dir=.turbo --filter @siemens/ix --filter @siemens/ix-angular
 
   lint:
     runs-on: ubuntu-latest
