--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "gulp",
-    "test:e2e": "playwright test --reporter html",
+    "test:e2e": "playwright test",
     "host-root": "http-server -a 127.0.0.1"
   },
   "devDependencies": {
