--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,7 @@
     "test": "npm run test:spec && npm run test:ct",
     "test:spec": "stencil test --spec",
     "test:ct": "playwright test --config playwright-ct.config.ts --reporter list",
-    "visual-regression": "playwright test --reporter html",
+    "visual-regression": "playwright test",
     "host-root": "http-server ./ -a 127.0.0.1 -p 8080 -c-1",
     "generate": "stencil generate"
   },
