--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -23,11 +23,11 @@
     "@docusaurus/preset-classic": "3.0.0",
     "@docusaurus/theme-live-codeblock": "3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@siemens/html-test-app": "~2.0.3",
-    "@siemens/ix": "~2.0.3",
-    "@siemens/ix-echarts": "~2.0.3",
+    "@siemens/html-test-app": "workspace:*",
+    "@siemens/ix": "workspace:*",
+    "@siemens/ix-echarts": "workspace:*",
     "@siemens/ix-icons": "2.0.0-beta.0",
-    "@siemens/ix-react": "~2.0.3",
+    "@siemens/ix-react": "workspace:*",
     "@stackblitz/sdk": "^1.8.1",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.3.2",
