--- a/package.json
+++ b/package.json
@@ -27,16 +27,12 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "visual-regression": "dotenv -- turbo run visual-regression",
     "test": "dotenv -- turbo run test",
-    "prepare": "husky install",
-    "ci:version": "pnpm changeset version && pnpm i --lockfile-only",
-    "ci:publish": "pnpm publish -r --dry-run"
+    "prepare": "husky install"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.8",
-    "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "colorette": "^2.0.19",
