--- a/packages/documentation/static/code-runtime/html/package.json
+++ b/packages/documentation/static/code-runtime/html/package.json
@@ -9,13 +9,11 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
+  "devDependencies": {
     "@siemens/ix": "latest",
     "@siemens/ix-icons": "latest",
     "@siemens/ix-aggrid": "latest",
-    "@siemens/ix-echarts": "latest"
-  },
-  "devDependencies": {
+    "@siemens/ix-echarts": "latest",
     "vite": "^3.1.0"
   }
 }
