--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -23,7 +23,7 @@
     "@docusaurus/preset-classic": "3.0.0",
     "@docusaurus/theme-live-codeblock": "3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@siemens/html-test-app": "workspace:*",
+    "html-test-app": "workspace:*",
     "@siemens/ix": "workspace:*",
     "@siemens/ix-echarts": "workspace:*",
     "@siemens/ix-icons": "2.0.0-beta.0",
@@ -44,7 +44,7 @@
     "@docusaurus/module-type-aliases": "3.0.0",
     "@docusaurus/tsconfig": "3.0.0",
     "@docusaurus/types": "3.0.0",
-    "@siemens/figma-plugin": "workspace:*",
+    "figma-plugin": "workspace:*",
     "@types/fs-extra": "^9.0.13",
     "@types/rimraf": "^3.0.2",
     "@types/tar": "^6.1.7",
