--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,8 +2,8 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
   "changelog": false,
   "commit": false,
-  "fixed": [],
-  "linked": [
+  "linked": [],
+  "fixed": [
     [
       "@siemens/ix",
       "@siemens/ix-angular",
