--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -38,5 +38,8 @@
     "ng-packagr": "^14.2.0",
     "ts-jest": "^29.0.3",
     "typescript": "4.6.4"
+  },
+  "publishConfig": {
+    "directory": "dist"
   }
 }
