--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,5 +27,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          publish: pnpm ci:publish
+          publish: pnpm ci:publish --publish-branch ${{ github.ref_name }}
           version: pnpm ci:version
