--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.5.1",
-    "@stencil/core": "^3.2.1",
+    "@stencil/core": "^4.7.2",
     "@types/luxon": "^3.3.0",
     "animejs": "~3.2.1",
     "dayjs": "^1.11.9",
@@ -56,11 +56,11 @@
     "@playwright/test": "^1.32.1",
     "@siemens/ix-icons": "^2.0.0",
     "@stencil-community/eslint-plugin": "^0.5.0",
-    "@stencil-community/postcss": "^2.1.0",
-    "@stencil/angular-output-target": "^0.5.0",
-    "@stencil/react-output-target": "^0.4.0",
-    "@stencil/sass": "~3.0.0",
-    "@stencil/vue-output-target": "^0.7.0",
+    "@stencil-community/postcss": "^2.2.0",
+    "@stencil/angular-output-target": "^0.8.3",
+    "@stencil/react-output-target": "^0.5.3",
+    "@stencil/sass": "^3.0.7",
+    "@stencil/vue-output-target": "^0.8.7",
     "@testing-library/dom": "^8.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/animejs": "^3.1.4",
@@ -89,8 +89,8 @@
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
-    "bootstrap": "~5.2.0",
-    "@siemens/ix-icons": "^2.0.0"
+    "@siemens/ix-icons": "^2.0.0",
+    "bootstrap": "~5.2.0"
   },
   "config": {
     "commitizen": {
