--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
-    "@siemens/ix-icons": "~2.0.1",
+    "@siemens/ix-icons": "^2.0.0",
     "@stencil-community/eslint-plugin": "^0.5.0",
     "@stencil-community/postcss": "^2.1.0",
     "@stencil/angular-output-target": "^0.5.0",
@@ -89,7 +89,7 @@
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
     "bootstrap": "~5.2.0",
-    "@siemens/ix-icons": "~2.0.1"
+    "@siemens/ix-icons": "^2.0.0"
   },
   "config": {
     "commitizen": {
