--- a/packages/documentation/static/code-runtime/vue/package.json
+++ b/packages/documentation/static/code-runtime/vue/package.json
@@ -16,6 +16,7 @@
     "@siemens/ix-echarts": "latest",
     "ag-grid-community": "^28.2.1",
     "ag-grid-vue3": "^28.2.1",
+    "dayjs": "^1.11.9",
     "vue-echarts": "latest",
     "echarts": "latest"
   },
