--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -25,7 +25,7 @@
     "@siemens/html-test-app": "~2.0.4",
     "@siemens/ix": "~2.0.4",
     "@siemens/ix-echarts": "~2.0.4",
-    "@siemens/ix-icons": "~2.0.1",
+    "@siemens/ix-icons": "^2.0.0",
     "@siemens/ix-react": "~2.0.4",
     "@siemens/ix-angular": "~2.0.4",
     "@stackblitz/sdk": "^1.8.1",
