fix: set package versions

--- a/packages/documentation/static/code-runtime/angular/package.json
+++ b/packages/documentation/static/code-runtime/angular/package.json
@@ -16,19 +16,19 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
-    "@siemens/ix": "latest",
-    "@siemens/ix-icons": "latest",
-    "@siemens/ix-angular": "latest",
-    "@siemens/ix-aggrid": "latest",
-    "@siemens/ix-echarts": "latest",
+    "@siemens/ix": "~2.0.4",
+    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-angular": "~2.0.4",
+    "@siemens/ix-aggrid": "~2.0.4",
+    "@siemens/ix-echarts": "~2.0.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "dayjs": "^1.11.9",
     "zone.js": "~0.12.0",
     "ag-grid-angular": "^29.1.0",
     "ag-grid-community": "^29.1.0",
-    "ngx-echarts": "14.0.0",
-    "echarts": "latest"
+    "ngx-echarts": "~14.0.0",
+    "echarts": "^5.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.2",
