--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -9,19 +9,19 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.34.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
-    "@siemens/ix": "latest",
-    "@siemens/ix-react": "latest",
-    "@siemens/ix-icons": "latest",
-    "@siemens/ix-aggrid": "latest",
-    "@siemens/ix-echarts": "latest",
+    "@siemens/ix": "~2.0.4",
+    "@siemens/ix-react": "~2.0.4",
+    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-aggrid": "~2.0.4",
+    "@siemens/ix-echarts": "~2.0.4",
     "ag-grid-community": "^29.1.0",
     "ag-grid-react": "^29.1.0",
     "dayjs": "^1.11.9",
-    "echarts-for-react": "latest",
-    "echarts": "latest"
+    "echarts-for-react": "~3.0.2",
+    "echarts": "^5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
