--- a/packages/documentation/static/code-runtime/vue/package.json
+++ b/packages/documentation/static/code-runtime/vue/package.json
@@ -9,16 +9,16 @@
   },
   "dependencies": {
     "vue": "^3.2.6",
-    "@siemens/ix": "latest",
-    "@siemens/ix-vue": "latest",
-    "@siemens/ix-icons": "latest",
-    "@siemens/ix-aggrid": "latest",
-    "@siemens/ix-echarts": "latest",
+    "@siemens/ix": "~2.0.4",
+    "@siemens/ix-vue": "~2.0.4",
+    "@siemens/ix-icons": "^2.0.0",
+    "@siemens/ix-aggrid": "~2.0.4",
+    "@siemens/ix-echarts": "~2.0.4",
     "ag-grid-community": "^28.2.1",
     "ag-grid-vue3": "^28.2.1",
     "dayjs": "^1.11.9",
-    "vue-echarts": "latest",
-    "echarts": "latest"
+    "vue-echarts": "~6.6.1",
+    "echarts": "^5.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
