--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -63,9 +63,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 3 chrome version",
-      "last 3 firefox version",
-      "last 5 safari version"
+      "last 3 chrome versions",
+      "last 3 firefox versions",
+      "last 5 safari versions"
     ]
   },
   "engines": {
