--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 .yarn-cache
+.yarnrc
+.yarn
 
 # compiled output
 /dist
