feat(react): add jest

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,20 +22,27 @@
     "clean": "rimraf dist && rimraf dist-transpiled",
     "compile": "rollup -c",
     "tsc": "tsc -p .",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-typescript": "^8.4.0",
     "@siemens/ix": "~2.0.4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "babel-jest": "^29.7.0",
     "eslint-config-ix": "*",
     "eslint-plugin-react": "^7.31.11",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
