--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.5.1",
-    "@stencil/core": "^4.7.2",
+    "@stencil/core": "^4.8.2",
     "@types/luxon": "^3.3.7",
     "animejs": "~3.2.1",
     "hyperlist": "^1.0.0",
@@ -54,7 +54,7 @@
   "devDependencies": {
     "@playwright/test": "^1.32.1",
     "@siemens/ix-icons": "^2.0.0",
-    "@stencil-community/eslint-plugin": "^0.5.0",
+    "@stencil-community/eslint-plugin": "^0.7.1",
     "@stencil-community/postcss": "^2.2.0",
     "@stencil/angular-output-target": "^0.8.3",
     "@stencil/react-output-target": "^0.5.3",
@@ -63,28 +63,29 @@
     "@testing-library/dom": "^8.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/animejs": "^3.1.4",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^16.18.11",
     "@types/mustache": "^4.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "animate.css": "~4.1.1",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0",
     "cssnano": "^6.0.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint-config-ix": "*",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "fs-extra": "^10.0.0",
     "http-server": "^14.1.1",
-    "jest": "^27.5.1",
-    "jest-cli": "^27.5.1",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "mustache": "^4.2.0",
     "postcss": "^8.4.29",
-    "puppeteer": "^19.5.2",
+    "puppeteer": "21.1.1",
     "sass": "^1.58.3",
     "start-server-and-test": "^1.14.0",
     "ts-node": "^10.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "~5.2.2"
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
