--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -64,8 +64,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/animejs": "^3.1.4",
     "@types/jest": "^29.5.6",
-    "@types/node": "^16.18.11",
     "@types/mustache": "^4.1.1",
+    "@types/node": "^16.18.11",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "animate.css": "~4.1.1",
@@ -73,6 +73,7 @@
     "bootstrap": "^5.2.0",
     "cssnano": "^6.0.1",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.56.0",
     "eslint-config-ix": "*",
     "eslint-plugin-react": "^7.33.2",
     "fs-extra": "^10.0.0",
@@ -85,7 +86,7 @@
     "sass": "^1.58.3",
     "start-server-and-test": "^1.14.0",
     "ts-node": "^10.0.0",
-    "typescript": "~5.2.2"
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
