--- a/.github/workflows/deploy-pages-daily.yml
+++ b/.github/workflows/deploy-pages-daily.yml
@@ -2,6 +2,8 @@ name: Deploy to GitHub Pages (DEV Version)
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 6 * * 1-4'
 
 permissions:
   contents: write
