--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,7 +28,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-typescript": "^8.4.0",
     "@siemens/ix": "~2.0.4",
@@ -54,9 +55,9 @@
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
+    "@siemens/ix-icons": "^2.0.0",
     "react": ">=17.0.2",
-    "react-dom": ">=17.0.2",
-    "@siemens/ix-icons": "^2.0.0"
+    "react-dom": ">=17.0.2"
   },
   "dependencies": {
     "@siemens/ix": "~2.0.4"
