--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,7 +23,8 @@
     "compile": "rollup -c",
     "tsc": "tsc -p .",
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "MIT",
@@ -33,8 +34,8 @@
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-typescript": "^8.4.0",
     "@siemens/ix": "~2.0.4",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
@@ -52,7 +53,9 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2"
   },
   "peerDependencies": {
     "@siemens/ix-icons": "^2.0.0",
