--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,17 +45,18 @@
     "eslint-config-ix": "*",
     "eslint-plugin-react": "^7.31.11",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.5",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2"
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "@siemens/ix-icons": "^2.0.0",
