--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,7 +49,7 @@
     "jest-environment-jsdom": "^29.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "~7.48.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.78.1",
     "rollup-plugin-dts": "^4.2.0",
