--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,6 +6,17 @@ body:
     attributes:
       value: |
         We appreciate your feedback on how to improve this project. Please be sure to include as much information and any neccessary resources!
+
+  - type: checkboxes
+    attributes:
+      label: Prerequisites
+      description:  Make sure to not violate these rules
+      options:
+        - label: I have not leaked any internal company information.
+          required: true
+        - label: I have not posted internal links or code snippets.
+          required: true
+
   - type: textarea
     id: Suggestion
     attributes:
