--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/siemens/ix",
     "directory": "packages/react"
   },
-  "version": "2.0.4",
+  "version": "2.1.0-beta.1",
   "description": "Siemens iX for React",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -28,7 +28,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.4.0",
-    "@siemens/ix": "~2.0.4",
+    "@siemens/ix": "~2.1.0-beta.1",
     "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
@@ -52,6 +52,6 @@
     "@siemens/ix-icons": "^2.0.0"
   },
   "dependencies": {
-    "@siemens/ix": "~2.0.4"
+    "@siemens/ix": "~2.1.0-beta.1"
   }
 }
