--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,19 +23,16 @@
     "compile": "rollup -c",
     "tsc": "tsc -p .",
     "lint": "eslint src",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-typescript": "^8.4.0",
+    "@siemens/ix": "~2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@siemens/ix": "~2.1.0",
     "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
@@ -56,7 +53,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vitest": "^1.3.1"
   },
   "peerDependencies": {
     "@siemens/ix-icons": "^2.0.0",
