--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,4 +101,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/turbo
       - name: Test
-        run: pnpm run test --cache-dir=.turbo --filter @siemens/ix --filter @siemens/ix-angular
+        run: pnpm run test --cache-dir=.turbo --filter !\documentation
