fix: layout and preview examples

--- a/packages/documentation/static/code-runtime/angular/package.json
+++ b/packages/documentation/static/code-runtime/angular/package.json
@@ -16,11 +16,11 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
-    "@siemens/ix": "~2.0.4",
-    "@siemens/ix-icons": "^2.0.0",
-    "@siemens/ix-angular": "~2.0.4",
-    "@siemens/ix-aggrid": "~2.0.4",
-    "@siemens/ix-echarts": "~2.0.4",
+    "@siemens/ix": "latest",
+    "@siemens/ix-icons": "latest",
+    "@siemens/ix-angular": "latest",
+    "@siemens/ix-aggrid": "latest",
+    "@siemens/ix-echarts": "latest",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0",
