--- a/packages/documentation/static/code-runtime/vue/package.json
+++ b/packages/documentation/static/code-runtime/vue/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "vue": "^3.2.6",
-    "@siemens/ix": "~2.0.4",
-    "@siemens/ix-vue": "~2.0.4",
-    "@siemens/ix-icons": "^2.0.0",
-    "@siemens/ix-aggrid": "~2.0.4",
-    "@siemens/ix-echarts": "~2.0.4",
+    "@siemens/ix": "latest",
+    "@siemens/ix-vue": "latest",
+    "@siemens/ix-icons": "latest",
+    "@siemens/ix-aggrid": "latest",
+    "@siemens/ix-echarts": "latest",
     "ag-grid-community": "^30.2.0",
     "ag-grid-vue3": "^28.2.1",
     "vue-echarts": "~6.6.1",
