--- a/packages/documentation/static/code-runtime/react/package.json
+++ b/packages/documentation/static/code-runtime/react/package.json
@@ -12,11 +12,11 @@
     "react-hook-form": "^7.34.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
-    "@siemens/ix": "~2.0.4",
-    "@siemens/ix-react": "~2.0.4",
-    "@siemens/ix-icons": "^2.0.0",
-    "@siemens/ix-aggrid": "~2.0.4",
-    "@siemens/ix-echarts": "~2.0.4",
+    "@siemens/ix": "latest",
+    "@siemens/ix-react": "latest",
+    "@siemens/ix-icons": "latest",
+    "@siemens/ix-aggrid": "latest",
+    "@siemens/ix-echarts": "latest",
     "ag-grid-community": "^30.2.0",
     "ag-grid-react": "^29.1.0",
     "echarts-for-react": "~3.0.2",
